kuberenetes/kyverno/require-resource-limits/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-resources
spec:
  containers:
    - name: app-container
      image: nginx
